tests/negative/test_mac_arg_name_duplicate.orb
mac foo (x y x) {};

fnc main () () {};